force-app/main/default/objects/Case/fields/Alternative_Availability_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Availability_End_Date__c</fullName>
    <label>Alternative Availability End Date</label>
    <type>Date</type>
</CustomField>