force-app/main/default/objects/Case/fields/Alternative_Availability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Availability_Start_Date__c</fullName>
    <label>Alternative Availability Start Date</label>
    <type>Date</type>
</CustomField>