force-app/main/default/objects/Case/fields/Assistance_Type__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Type__c</fullName>
    <label>Assistance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Volunteering</fullName>
            </value>
            <value>
                <fullName>Skilled Volunteering</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>