force-app/main/default/objects/Case/fields/Availability_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_End_Date__c</fullName>
    <label>Availability End Date</label>
    <type>Date</type>
</CustomField>