force-app/main/default/objects/Case/fields/Availability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Start_Date__c</fullName>
    <label>Availability Start Date</label>
    <type>Date</type>
</CustomField>