force-app/main/default/objects/Case/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>if ( isblank(text( Contact.Branch_Office__c )), TEXT(Account.Branch_Office__c) ,TEXT(Contact.Branch_Office__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>