force-app/main/default/objects/Case/fields/Cases_Round_Id__c.field-meta.xml
<CustomField>
    <fullName>Cases_Round_Id__c</fullName>
    <formula>MOD(VALUE(  CaseNumber ),3)+ 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Round Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>