force-app/main/default/objects/Case/fields/Closure_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closure_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closure Email Sent</label>
    <type>Checkbox</type>
</CustomField>