force-app/main/default/objects/Case/fields/Completed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completed_Notes__c</fullName>
    <label>Completed Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>