force-app/main/default/objects/Case/fields/Date_Case_Due_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Due_To_Close__c</fullName>
    <formula>if  ( ISBLANK(Date_Due__c ) ,  if (text(Priority)= &apos;Close Of Business&apos;, CreatedDate+1,
if (text(Priority)= &apos;Next Few Days&apos;, CreatedDate+3,  
if (text(Priority)= &apos;Next Week&apos;, CreatedDate+7,  
CreatedDate+14
)
))
 , DATETIMEVALUE(Date_Due__c ) )</formula>
    <label>Date Case Due To Close</label>
    <type>DateTime</type>
</CustomField>