force-app/main/default/objects/Case/fields/Estimated_Minutes_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Minutes_To_Complete__c</fullName>
    <label>Estimated Minutes To Complete</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>