force-app/main/default/objects/Case/fields/Fundraising_Description__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Description__c</fullName>
    <label>Fundraising Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>