force-app/main/default/objects/Case/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What incident is this related to</inlineHelpText>
    <label>Related Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>