force-app/main/default/objects/Case/fields/Initial_Acknowledge_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Acknowledge_Date__c</fullName>
    <label>Initial Acknowledge Date</label>
    <type>DateTime</type>
</CustomField>