force-app/main/default/objects/Case/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>A rich text area for owners of the case/system administrators to attach internal notes regarding the case that only the owner or system admin can view</description>
    <inlineHelpText>Add internal notes relating to the case here. These can be links, images, or general text</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>