force-app/main/default/objects/Case/fields/Office_Requesting__c.field-meta.xml
<CustomField>
    <fullName>Office_Requesting__c</fullName>
    <formula>CreatedBy.UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Requesting</label>
    <type>Text</type>
</CustomField>