force-app/main/default/objects/Case/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <inlineHelpText>Please enter the URL of the affected record. If there are multiple records impacted please enter just one.</inlineHelpText>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>