force-app/main/default/objects/Case/fields/Salesforce_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Request_Type__c</fullName>
    <inlineHelpText>What kind of request is this? Admin task is to be used for things that require administrative access e.g. merging duplicate records.</inlineHelpText>
    <label>Salesforce Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <label>Bug or Error</label>
            </value>
            <value>
                <fullName>Change</fullName>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>Idea</fullName>
                <label>Idea/Feedback</label>
            </value>
            <value>
                <fullName>Admin task</fullName>
            </value>
            <value>
                <fullName>Login Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>