force-app/main/default/objects/Case/fields/Skilled_Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Volunteering__c</fullName>
    <label>Skilled Volunteering</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>