force-app/main/default/objects/Case/fields/Volunteering_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteering_Type__c</fullName>
    <label>Volunteering Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Volunteering</fullName>
            </value>
            <value>
                <fullName>Community Fundraising/Event Volunteering</fullName>
            </value>
            <value>
                <fullName>Camp Volunteering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>