force-app/main/default/objects/Case/recordTypes/Corporate_Volunteering_EOI.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Volunteering_EOI</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Corporate Volunteering EOI</label>
</RecordType>