force-app/main/default/objects/Case/recordTypes/Family_Request.recordType-meta.xml
<RecordType>
    <fullName>Family_Request</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Family Request</label>
</RecordType>