force-app/main/default/objects/Case/recordTypes/Incident_Actions.recordType-meta.xml
<RecordType>
    <fullName>Incident_Actions</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Incident Actions</label>
</RecordType>