force-app/main/default/objects/Case/recordTypes/Internal_Requests.recordType-meta.xml
<RecordType>
    <fullName>Internal_Requests</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Internal Requests</label>
</RecordType>