force-app/main/default/objects/Case/recordTypes/Respite_Case.recordType-meta.xml
<RecordType>
    <fullName>Respite_Case</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Respite Case</label>
</RecordType>