force-app/main/default/objects/Case/recordTypes/Salesforce_Support.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Support</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support Process</businessProcess>
    <description>Log a request for Salesforce support</description>
    <label>Salesforce Support</label>
</RecordType>