force-app/main/default/objects/Case/recordTypes/Volunteer_Request.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Request</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Volunteer Request</label>
</RecordType>