force-app/main/default/objects/Case/listViews/All_Cases_2023.listView-meta.xml
<ListView>
    <fullName>All_Cases_2023</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Awaiting Response,Closed</value>
    </filters>
    <label>All Cases - 2023</label>
</ListView>