force-app/main/default/objects/Case/listViews/All_Salesforce_Cases.listView-meta.xml
<ListView>
    <fullName>All_Salesforce_Cases</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,On Hold,Escalated</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Salesforce Team</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Program Support Team</value>
    </filters>
    <filters>
        <field>CASES.REASON</field>
        <operation>notEqual</operation>
        <value>Enquiry for Respite</value>
    </filters>
    <label>All Salesforce Cases</label>
</ListView>