force-app/main/default/objects/Case/listViews/Cases_Outstanding_For_More_Then_One_Week.listView-meta.xml
<ListView>
    <fullName>Cases_Outstanding_For_More_Then_One_Week</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>lessThan</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Cases Outstanding For More Then One Week</label>
</ListView>