force-app/main/default/objects/Case/listViews/On_Hold_Salesforce_Support_Cases.listView-meta.xml
<ListView>
    <fullName>On_Hold_Salesforce_Support_Cases</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Salesforce_Request_Type__c</columns>
    <columns>User__c</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Salesforce Team,Program Support Team</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Salesforce_Support</value>
    </filters>
    <filters>
        <field>CASES.REASON</field>
        <operation>notEqual</operation>
        <value>Enquiry for Respite</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>On Hold Salesforce Support Cases</label>
</ListView>