force-app/main/default/objects/Case/listViews/Program_Support_Team_All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Program_Support_Team_All_Open_Cases</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Date_Case_Due_To_Close__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>Program Support Team</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Program Support Team All Open Cases</label>
</ListView>