force-app/main/default/objects/Case/listViews/Program_Support_Team_Case.listView-meta.xml
<ListView>
    <fullName>Program_Support_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Branch__c</columns>
    <columns>CASES.REASON</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CLOSED</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Program Support Team</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>