force-app/main/default/objects/Case/listViews/Salesforce_Cases_Completed_last_week.listView-meta.xml
<ListView>
    <fullName>Salesforce_Cases_Completed_last_week</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>User__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK,THIS_WEEK</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Salesforce_Support</value>
    </filters>
    <label>Salesforce- Closed this week or last</label>
    <sharedTo>
        <role>GM_Finance_Ops</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>