force-app/main/default/objects/Case/listViews/Salesforce_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Salesforce_Change_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Request_Type__c</field>
        <operation>equals</operation>
        <value>Change,Change Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Mitchell Beck,Salesforce Team</value>
    </filters>
    <label>Salesforce Change Requests</label>
    <sharedTo>
        <role>GM_Finance_Ops</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>